--- a/app/views/favorite_templates/myfavorites.html.erb
+++ b/app/views/favorite_templates/myfavorites.html.erb
@@ -18,7 +18,7 @@
                   <div class="row">
                     
                   <div class="col">
-                    <a href="/clubs/<%= club_id %>">
+                    <a href="/clubprofile/<%= club_id %>">
                       <% club = Club.find_by(id: club_id) %>
                       <%= club.title %>
                   </a>
