--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://momentjs.com/downloads/moment-with-locales.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
     <!-- Make it responsive to small screens -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -31,27 +33,36 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
+          <% if current_user.present? %>
           <% if current_user.id == 1 %>
           <li class="nav-item"><a class="nav-link" href="/clubs">Clubs</a></li>
           <li class="nav-item"><a class="nav-link" href="/events">Events</a></li>
-          <li class="nav-item"><a class="nav-link" href="/users">Users</a></li>
           <li class="nav-item"><a class="nav-link" href="/enrollments">Enrollments</a></li>
           <li class="nav-item"><a class="nav-link" href="/attendances">Attendance</a></li>
           <li class="nav-item"><a class="nav-link" href="/categories">Categories</a></li>
           <li class="nav-item"><a class="nav-link" href="/tags">Tags</a></li>
           <li class="nav-item"><a class="nav-link" href="/experiment">Experiment</a></li>
           <li class="nav-item"><a class="nav-link" href="/friends">All Friend Relationships</a></li>
+          <li class="nav-item"><a class="nav-link" href="/shares">All Shares</a></li>
+          <% end %>
           <% end %>
           <li class="nav-item"><a class="nav-link" href="/search">Search</a></li>
-          <li class="nav-item"><a class="nav-link" href="/myfriends">My Friends</a></li>
-          <li class="nav-item"><a class="nav-link" href="/myfavorites">My Favorites</a></li>
-          
+          <li class="nav-item"><a class="nav-link" href="/users">Users</a></li>
         </ul>
         <ul class="navbar-nav">
         <% if current_user %>
-          <li class="nav-item active">
-            <a class="nav-link" href="/users/edit"><%= current_user.firstname %></a>
-          </li>
+          <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <%= current_user.firstname %>
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/mywall">My Wall</a>
+          <!--<a class="dropdown-item" href="/notifications/users">Notifications</a>-->
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="/users/edit">Edit Account</a>
+        </div>
+      </li>
+      
           <li class="nav-item active">
             <a class="nav-link" href="/users/sign_out" data-method="delete" rel="nofollow">Sign Out</a>
           </li>
@@ -82,7 +93,5 @@
     </div>
       <%= yield %>
 
-
-    <%= dev_tools if Rails.env.development? %>
   </body>
 </html>
